--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <provider
@@ -25,26 +25,37 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/picker_provider_paths" />
         </provider>
+
         <activity
             android:name=".activities.home.HomeActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".activities.login.LoginActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
-        <activity android:name=".activities.order_confirmation.OrderConfirmationActivity"
-            android:parentActivityName=".activities.shopping_cart.ShoppingCartActivity"/>
-        <activity android:name=".activities.order_detail.OrderDetailActivity"
-            android:parentActivityName=".activities.home.HomeActivity"/>
-        <activity android:name=".activities.order_history.OrderHistoryActivity"
-            android:parentActivityName=".activities.home.HomeActivity"/>
-        <activity android:name=".activities.product_by_category.ProductByCategoryActivity"
-            android:parentActivityName=".activities.home.HomeActivity"/>
-        <activity android:name=".activities.profile.ProfileActivity" />
-        <activity android:name=".activities.register.RegisterActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
-        <activity android:name=".activities.shopping_cart.ShoppingCartActivity"
-            android:parentActivityName=".activities.home.HomeActivity"/>
-        <activity android:name=".activities.splash_screen.SplashScreenActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.login.LoginActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name=".activities.order_confirmation.OrderConfirmationActivity"
+            android:parentActivityName=".activities.shopping_cart.ShoppingCartActivity" />
+        <activity
+            android:name=".activities.order_detail.OrderDetailActivity"
+            android:parentActivityName=".activities.home.HomeActivity" />
+        <activity
+            android:name=".activities.order_history.OrderHistoryActivity"
+            android:parentActivityName=".activities.home.HomeActivity" />
+        <activity
+            android:name=".activities.product_by_category.ProductByCategoryActivity"
+            android:parentActivityName=".activities.home.HomeActivity" />
+        <activity
+            android:name=".activities.profile.ProfileActivity"
+            android:parentActivityName=".activities.home.HomeActivity" />
+        <activity
+            android:name=".activities.register.RegisterActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name=".activities.shopping_cart.ShoppingCartActivity"
+            android:parentActivityName=".activities.home.HomeActivity" />
+        <activity
+            android:name=".activities.splash_screen.SplashScreenActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -52,13 +63,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.edit_profile.EditProfileActivity"
-            android:parentActivityName=".activities.profile.ProfileActivity"/>
-        <activity android:name=".activities.edit_shipping_address.EditShippingAddressActivity"
-            android:parentActivityName=".activities.profile.ProfileActivity"/>
-        <activity android:name=".activities.intro.IntroActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"/>
-        <activity android:name=".activities.product_detail.ProductDetailActivity"></activity>
+        <activity
+            android:name=".activities.edit_profile.EditProfileActivity"
+            android:parentActivityName=".activities.profile.ProfileActivity" />
+        <activity
+            android:name=".activities.edit_shipping_address.EditShippingAddressActivity"
+            android:parentActivityName=".activities.profile.ProfileActivity" />
+        <activity
+            android:name=".activities.intro.IntroActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
+        <activity
+            android:name=".activities.product_detail.ProductDetailActivity"
+            android:parentActivityName=".activities.home.HomeActivity" />
+        <activity android:name=".activities.preview_document.PreviewDocumentActivity"
+            android:parentActivityName=".activities.order_detail.OrderDetailActivity"></activity>
     </application>
 
 </manifest>
